src/parser/ASPCore2Parser.js
// Generated from src/parser/ASPCore2.g4 by ANTLR 4.9.0-SNAPSHOT
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { Token } from "antlr4ts/Token";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";
import * as Utils from "antlr4ts/misc/Utils";
export class ASPCore2Parser extends Parser {
    // @Override
    // @NotNull
    get vocabulary() {
        return ASPCore2Parser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "ASPCore2.g4"; }
    // @Override
    get ruleNames() { return ASPCore2Parser.ruleNames; }
    // @Override
    get serializedATN() { return ASPCore2Parser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator(ASPCore2Parser._ATN, this);
    }
    // @RuleVersion(0)
    program() {
        let _localctx = new ProgramContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, ASPCore2Parser.RULE_program);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 213;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ASPCore2Parser.SYMBOLIC_CONSTANT) | (1 << ASPCore2Parser.VARIABLE) | (1 << ASPCore2Parser.STRING) | (1 << ASPCore2Parser.NUMBER) | (1 << ASPCore2Parser.CONS) | (1 << ASPCore2Parser.WCONS) | (1 << ASPCore2Parser.DASH) | (1 << ASPCore2Parser.PARAM_OPEN) | (1 << ASPCore2Parser.CURLY_OPEN) | (1 << ASPCore2Parser.ANON_VAR))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (ASPCore2Parser.EXISTS - 36)) | (1 << (ASPCore2Parser.ANNOTATION_GLOBAL_WASP_PROPAGATOR - 36)) | (1 << (ASPCore2Parser.DIRECTIVE_NAME - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_ALIGN_SUBSTITUTIONS - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_LOOK_AHEAD - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_PROJECTION - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_REWRITING_ARITH - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_ORDERING - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_ATOM_INDEXED - 36)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_PARTIAL_ORDER - 36)) | (1 << (ASPCore2Parser.ANNOTATION_GLOBAL_ORDERING - 36)) | (1 << (ASPCore2Parser.ANNOTATION_GLOBAL_ATOM_INDEXED - 36)) | (1 << (ASPCore2Parser.ANNOTATION_GLOBAL_PARTIAL_ORDER - 36)))) !== 0) || ((((_la - 68)) & ~0x1F) === 0 && ((1 << (_la - 68)) & ((1 << (ASPCore2Parser.ANNOTATION_GLOBAL_EXTATOM_CONVERSION - 68)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_TO_DECOMPOSE - 68)) | (1 << (ASPCore2Parser.ANNOTATION_RULE_TO_NOT_DECOMPOSE - 68)) | (1 << (ASPCore2Parser.ANNOTATION_GLOBAL_WASP_HEURISTIC - 68)))) !== 0)) {
                    {
                        {
                            this.state = 210;
                            this.rule();
                        }
                    }
                    this.state = 215;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    rule() {
        let _localctx = new RuleContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, ASPCore2Parser.RULE_rule);
        try {
            this.state = 222;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case ASPCore2Parser.SYMBOLIC_CONSTANT:
                case ASPCore2Parser.VARIABLE:
                case ASPCore2Parser.STRING:
                case ASPCore2Parser.NUMBER:
                case ASPCore2Parser.CONS:
                case ASPCore2Parser.WCONS:
                case ASPCore2Parser.DASH:
                case ASPCore2Parser.PARAM_OPEN:
                case ASPCore2Parser.CURLY_OPEN:
                case ASPCore2Parser.ANON_VAR:
                case ASPCore2Parser.EXISTS:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 216;
                        this.simple_rule();
                    }
                    break;
                case ASPCore2Parser.ANNOTATION_RULE_ALIGN_SUBSTITUTIONS:
                case ASPCore2Parser.ANNOTATION_RULE_LOOK_AHEAD:
                case ASPCore2Parser.ANNOTATION_RULE_PROJECTION:
                case ASPCore2Parser.ANNOTATION_RULE_REWRITING_ARITH:
                case ASPCore2Parser.ANNOTATION_RULE_ORDERING:
                case ASPCore2Parser.ANNOTATION_RULE_ATOM_INDEXED:
                case ASPCore2Parser.ANNOTATION_RULE_PARTIAL_ORDER:
                case ASPCore2Parser.ANNOTATION_RULE_TO_DECOMPOSE:
                case ASPCore2Parser.ANNOTATION_RULE_TO_NOT_DECOMPOSE:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 217;
                        this.annotations_rule();
                        this.state = 218;
                        this.simple_rule();
                    }
                    break;
                case ASPCore2Parser.ANNOTATION_GLOBAL_WASP_PROPAGATOR:
                case ASPCore2Parser.ANNOTATION_GLOBAL_ORDERING:
                case ASPCore2Parser.ANNOTATION_GLOBAL_ATOM_INDEXED:
                case ASPCore2Parser.ANNOTATION_GLOBAL_PARTIAL_ORDER:
                case ASPCore2Parser.ANNOTATION_GLOBAL_EXTATOM_CONVERSION:
                case ASPCore2Parser.ANNOTATION_GLOBAL_WASP_HEURISTIC:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 220;
                        this.annotation_global();
                    }
                    break;
                case ASPCore2Parser.DIRECTIVE_NAME:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 221;
                        this.directive();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    simple_rule() {
        let _localctx = new Simple_ruleContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, ASPCore2Parser.RULE_simple_rule);
        try {
            this.state = 246;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 224;
                        this.head();
                        this.state = 225;
                        this.match(ASPCore2Parser.DOT);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 227;
                        this.head();
                        this.state = 228;
                        this.match(ASPCore2Parser.CONS);
                        this.state = 229;
                        this.match(ASPCore2Parser.DOT);
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 231;
                        this.head();
                        this.state = 232;
                        this.match(ASPCore2Parser.CONS);
                        this.state = 233;
                        this.body();
                        this.state = 234;
                        this.match(ASPCore2Parser.DOT);
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 236;
                        this.match(ASPCore2Parser.CONS);
                        this.state = 237;
                        this.body();
                        this.state = 238;
                        this.match(ASPCore2Parser.DOT);
                    }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 240;
                        this.match(ASPCore2Parser.WCONS);
                        this.state = 241;
                        this.body();
                        this.state = 242;
                        this.match(ASPCore2Parser.DOT);
                        this.state = 243;
                        this.weight_at_levels();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 245;
                        this.query();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    head() {
        let _localctx = new HeadContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, ASPCore2Parser.RULE_head);
        try {
            this.state = 250;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 3, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 248;
                        this.disjunction();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 249;
                        this.choice_atom();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    body() {
        let _localctx = new BodyContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, ASPCore2Parser.RULE_body);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 252;
                this.conjunction();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    weight_at_levels() {
        let _localctx = new Weight_at_levelsContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, ASPCore2Parser.RULE_weight_at_levels);
        try {
            this.state = 263;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 254;
                        this.match(ASPCore2Parser.SQUARE_OPEN);
                        this.state = 255;
                        this.term();
                        this.state = 256;
                        this.match(ASPCore2Parser.SQUARE_CLOSED);
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 258;
                        this.match(ASPCore2Parser.SQUARE_OPEN);
                        this.state = 259;
                        this.term();
                        this.state = 260;
                        this.levels_and_terms();
                        this.state = 261;
                        this.match(ASPCore2Parser.SQUARE_CLOSED);
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    levels_and_terms() {
        let _localctx = new Levels_and_termsContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, ASPCore2Parser.RULE_levels_and_terms);
        try {
            this.state = 274;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 5, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 265;
                        this.match(ASPCore2Parser.AT);
                        this.state = 266;
                        this.term();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 267;
                        this.match(ASPCore2Parser.AT);
                        this.state = 268;
                        this.term();
                        this.state = 269;
                        this.match(ASPCore2Parser.COMMA);
                        this.state = 270;
                        this.terms();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 272;
                        this.match(ASPCore2Parser.COMMA);
                        this.state = 273;
                        this.terms();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    disjunction() {
        let _localctx = new DisjunctionContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, ASPCore2Parser.RULE_disjunction);
        try {
            this.state = 286;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 276;
                        this.classic_literal();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 277;
                        this.classic_literal();
                        this.state = 278;
                        this.match(ASPCore2Parser.HEAD_SEPARATOR);
                        this.state = 279;
                        this.disjunction();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 281;
                        this.existential_atom();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 282;
                        this.existential_atom();
                        this.state = 283;
                        this.match(ASPCore2Parser.HEAD_SEPARATOR);
                        this.state = 284;
                        this.disjunction();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException) {
